--- a/products.html
+++ b/products.html
@@ -175,6 +175,13 @@
             margin-right: 8px;
         }
 
+        .delivery-time {
+            font-style: italic;
+            color: #777;
+            margin-top: 10px;
+            display: block; /* Make it a block element so it takes up the full width */
+        }
+        
         .package .price {
             font-size: 1.5em;
             font-weight: bold;
@@ -270,7 +277,7 @@
             <!-- Starter Site Package -->
             <div class="package">
                 <h3>Starter Site</h3>
-                <p>Perfect for personal portfolios or small websites. Get a simple, functional site with essential features.</p>
+                <p>Perfect for personal portfolios or small websites. Get a simple, functional site with essential features. </p>
                 <ul>
                     <li>Functional Website</li>
                     <li>3 Pages</li>
@@ -282,6 +289,7 @@
                     <li>Hosting setup</li>
                     <li>Social media icons</li>
                 </ul>
+                <span class="delivery-time">Delivery Time: 5 days</span>
                 <span class="price">$80</span>
                 <a href="contact.html" class="cta-button">Order Now</a>
             </div>
@@ -305,6 +313,7 @@
                     <li>Hosting setup</li>
                     <li>Social media icons</li>
                 </ul>
+                <span class="delivery-time">Delivery Time: 7 days</span>
                 <span class="price">$200</span>
                 <a href="contact.html" class="cta-button">Order Now</a>
             </div>
@@ -328,6 +337,7 @@
                     <li>Hosting setup</li>
                     <li>Social media icons</li>
                 </ul>
+                <span class="delivery-time">Delivery Time: 10 days</span>
                 <span class="price">$400</span>
                 <a href="contact.html" class="cta-button">Order Now</a>
             </div>
