--- a/portfolio.html
+++ b/portfolio.html
@@ -129,9 +129,9 @@
         <div class="portfolio-grid">
             <!-- Example Portfolio Items -->
             <div class="portfolio-item">
-                <img src="placeholder-image.jpg" alt="Project 1">  <!-- Replace with your project image -->
-                <h3>Project Title 1</h3>
-                <p>Brief description of project 1.</p>
+                <img src="images/tabletop sim home screen.jpeg" alt="Project 1">  <!-- Replace with your project image -->
+                <h3>Tabletop Simulator</h3>
+                <p>I created this website to hold multiple tabletop games for people to play and compete with each other in. Users are able to play multiple games such as, Blackjack, ConnectFour, and Cookie Clicker. All of the games work great, and allow the user to keep up with their records for each game.</p>
             </div>
 
             <div class="portfolio-item">
