--- a/portfolio.html
+++ b/portfolio.html
@@ -74,19 +74,11 @@
             transform: translateY(-5px);
         }
 
-        /* Style for the image container */
-        .portfolio-item .image-container {
-            display: flex;             /* Use flexbox for horizontal arrangement */
-            flex-wrap: wrap;          /* Allow images to wrap to the next line if needed */
-            justify-content: center;  /* Center images horizontally */
-            margin-bottom: 0.5em;     /* Add spacing below the images */
-        }
-
-        .portfolio-item .image-container img {
-            max-width: 45%;           /* Adjust as needed - reduced to fit multiple images on a line */
+        .portfolio-item img {
+            max-width: 100%;
             height: auto;
             border-radius: 5px;
-            margin: 0.25em;          /* Add spacing around each image */
+            margin-bottom: 0.5em;
         }
 
         footer {
@@ -137,18 +129,14 @@
         <div class="portfolio-grid">
             <!-- Example Portfolio Items -->
             <div class="portfolio-item">
-                <div class="image-container">
-                    <img src="images/tabletop sim home screen.jpeg" alt="Project 1 - Home Page">
-                    <img src="images/tabletop sim login screen.jpeg" alt="Project 1 - Login Page">
-                    <img src="images/tabletop sim start screen.jpeg" alt="Project 1 - Start Page">
-                </div>
-                <h3>Tabletop Simulator</h3>
-                <p>I created this website to hold multiple tabletop games for people to play and compete with each other in. Users are able to play multiple games such as, Blackjack, ConnectFour, and Cookie Clicker. All of the games work great, and allow the user to keep up with their records for each game.</p>
+                <img src="images/tabletop sim home screen.jpeg" alt="Project 1 - Home Page"> <!-- Main Image -->
+                <h3><a href="project1.html">Tabletop Simulator</a></h3> <!-- Linked Title -->
+                <p>Tabletop Simulator is a web application designed as a digital gaming platform. The project features a selection of tabletop and casual games including Connect Four, Blackjack, and Cookie Clicker, all accessible through a centralized interface. Key features include user authentication (login/signup), and a focus on creating a lightweight, enjoyable, and easy-to-navigate online gaming experience with a rustic wood-themed visual style.</p>
             </div>
 
             <div class="portfolio-item">
-                <img src="placeholder-image.jpg" alt="Project 2">  <!-- Replace with your project image -->
-                <h3>Project Title 2</h3>
+                <img src="images/project2_main.jpg" alt="Project 2"> <!-- Main Image -->
+                <h3><a href="project2.html">Project Title 2</a></h3> <!-- Linked Title -->
                 <p>Brief description of project 2.</p>
             </div>
 
