--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
             <!-- Example Portfolio Items -->
             <div class="portfolio-item">
                 <img src="images/tabletop sim home screen.jpeg" alt="Project 1 - Home Page"> <!-- Main Image -->
-                <h3><a href="project1.html">Tabletop Simulator</a></h3> <!-- Linked Title -->
+                <h3><a href="TableTopSimulator.html">Tabletop Simulator</a></h3> <!-- Linked Title -->
                 <p>Tabletop Simulator is a web application designed as a digital gaming platform. The project features a selection of tabletop and casual games including Connect Four, Blackjack, and Cookie Clicker, all accessible through a centralized interface. Key features include user authentication (login/signup), and a focus on creating a lightweight, enjoyable, and easy-to-navigate online gaming experience with a rustic wood-themed visual style.</p>
             </div>
 
