--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
     <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <!-- Example Portfolio Items -->
+            <!-- Portfolio Items -->
             <div class="portfolio-item">
                 <img src="images/tabletop sim home screen.jpeg" alt="Project 1 - Home Page"> <!-- Main Image -->
                 <h3><a href="TableTopSimulator.html">Tabletop Simulator</a></h3> <!-- Linked Title -->
@@ -135,9 +135,9 @@
             </div>
 
             <div class="portfolio-item">
-                <img src="images/project2_main.jpg" alt="Project 2"> <!-- Main Image -->
-                <h3><a href="project2.html">Project Title 2</a></h3> <!-- Linked Title -->
-                <p>Brief description of project 2.</p>
+                <img src="images/StuddyHomePage.jpeg" alt="Project 2 - Home Page"> <!-- Main Image -->
+                <h3><a href="Studdy.html">Studdy</a></h3> <!-- Linked Title -->
+                <p>Studdy is a web-based personalized study buddy built with Django and Python, emphasizing affordable and accessible learning resources. Utilizing the ChatGPT API, it generates tailored practice problems, making it ideal for self-directed high school students. Deployed on PythonAnywhere (a low-cost or free hosting platform), Studdy offers easily accessible quality learning material for grades 9-12. The website is designed to be easy to navigate with personalized questions and the flexibility of learning a variety of subjects from environmental science, biology, physical science, and many more.</p>
             </div>
 
             <!-- Add more portfolio items here. Each item should include an image, title, and description. -->
