--- a/TableTopSimulator.html
+++ b/TableTopSimulator.html
@@ -25,6 +25,9 @@
             <img src="images/tabletop sim home screen.jpeg" alt="Project 1 - Home Page">
             <img src="images/tabletop sim login screen.jpeg" alt="Project 1 - Login Page">
             <img src="images/tabletop sim start screen.jpeg" alt="Project 1 - Start Page">
+            <img src="images/Cookie Clicker.jpeg" alt="Project 1 - Cookie Clicker Page">
+            <img src="images/Connect four.jpeg" alt="Project 1 - Connect Four Page">
+            <img src="images/Black Jack.jpeg" alt="Project 1 - Black Jack Page">
             <!-- Add more images as needed -->
         </div>
 
